<resources>
    <string name="app_name">Minor</string>
    <string name="app_title">Music Connect People</string>

    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_login">Login</string>
    <string name="login_register">Register</string>
    <string name="login_remember_me">Remember me</string>
    <string name="login_invalid_credentials">Invalid username or password</string>

    <string name="register_username">Username</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_register">Register</string>
    <string name="register_invalid_username">Username can only contain lowercase or/and uppercase.
        Username length: from 3 to 20 symbols.</string>
    <string name="register_invalid_email">Email can only contain lowercase, uppercase, numbers,
        special symbols (@._-). Email length: from 10 to 50 symbols.</string>
    <string name="register_invalid_password">Password can only contain lowercase, uppercase, numbers,
        special symbols (.!@_). Password length: from 5 to 20 symbols.</string>


</resources>