<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#6ECDF8"
    android:padding="10dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/musiclogo3"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_title"
        android:textColor="#040303"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="25sp"
        android:fontFamily="sans-serif-black"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>


    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_username"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="10dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>


    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_password" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>


    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_remember_me"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_login"
            android:background="#8668BA"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_register"
            android:background="@color/red"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>